# Crypto-Trading

./: .gitignore  CMakeLists.txt  README.md  a.out  concurrency_practice.cpp  debug.sh  main.cpp  run.sh  vector.cpp
OrderBookLib/: Ask.cpp  Ask.h  Benchmark.cpp  Benchmark.h  Bid.cpp  Bid.h  CMakeLists.txt  DataIngestion.cpp  DataIngestion.h  Enums.h  HazardPointer.cpp  HazardPointer.h  HazardPointerOwner.cpp  HazardPointerOwner.h  LockFreeQueue.cpp  LockFreeQueue.h  MutexQueue.cpp  MutexQueue.h  Order.cpp  Order.h  OrderBook.cpp  OrderBook.h  OrderBookAnalysis.cpp  OrderBookAnalysis.h  Timer.h
TradingAlgoLib/: CMakeLists.txt  TradeExecution.cpp  TradeExecution.h  TradingAlgo.cpp  TradingAlgo.h
